--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,8 @@
 
    color-scheme: light dark;
    color: rgba(255, 255, 255, 0.87);
-   background-color: #eeecec;
+   background-color: #e0dfdf;
+   max-width: none;
 
    font-synthesis: none;
    text-rendering: optimizeLegibility;
