--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@custom-variant dark (&:where(.dark, .dark *));
 
 :root {
    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -6,8 +7,6 @@
    font-weight: 400;
 
    color-scheme: light dark;
-   /* color: rgba(255, 255, 255, 0.87); */
-   /* background-color: #2C2C2C; */
    max-width: none;
 
    font-synthesis: none;
@@ -18,12 +17,15 @@
 }
 
 body {
-   @apply bg-white text-black
+   background-color: #ffffff;
+   color: #000000;
 }
 
 .dark body {
-   @apply bg-[#2C2C2C] text-white
+   background-color: #2C2C2C;
+   color: #ffffff;
 }
+
 
 /* a {
    font-weight: 500;
